--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="about" id="about">
             <div class="container">
                 <div class="profile img" data-aos="fade-right" data-aos-delay="300">
-                    <img src="webpic.jpg"  alt=" ">
+                    <img src="./webpic.jpg"  alt=" ">
                 <div class="about-details" data-aos="fade-left" data-aos-delay="600">
                     <div class="about-heading">
                         <h1>About</h1>
@@ -133,7 +133,7 @@
                         <h6>Web Development</h6>
                         <h1>Web Portfolio</h1>
                         <div id="portfolio-img">
-                        <img src="Screenshot (41).png" data-aos="fade-right" data-aos-delay="1200">
+                        <img src="./Screenshot (41).png" data-aos="fade-right" data-aos-delay="1200">
                         </div>
                       
                        
